[FIX] fixed sizing and spacing. completed

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 header{
@@ -8,11 +9,17 @@ header{
     background-image:url(../img/pattern.png) ;
     background-color: #4DA0FE;
     background-size: 35%;
+    width: 100%;
 }
 
 body{
     background-color: white;
 }
+
+h1{
+    font-size: 30px;
+}
+
 .logo{
     width: 150px;
     margin-top: 30px;
@@ -47,7 +54,7 @@ a{
 }
 
 .main-photo-container img{
-    height: 290px;
+    height: 280px;
 }
 
 .photo-descriptions{
@@ -57,6 +64,9 @@ a{
 
 p, li{
     font-size: 12.5px;
+}
+
+p{
     margin: 15px 5px;
 }
 
@@ -70,10 +80,9 @@ ul{
 
 table{
     font-size: 12.5px;
-    margin-bottom: 15px;
-    margin-left: 5px;
+    margin: 15px 5px;
     border-collapse: collapse;
-    width: 100%;
+    width: 99%;
 }
 
 th{
@@ -109,6 +118,7 @@ th{
     background-image: url(../img/graph.jpg);
     background-size: cover;
     margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .suggestion-box{
